# TwoPi

./: .gitignore  Makefile  README.md  README.rhel7.md  config_twopi.py  tcl_module
doc/: BuildDockerImage.txt  DockerReadMe.md  HomeBrew.txt
docker/: Dockerfile.base  Dockerfile.petram  Dockerfile.petram-local  Dockerfile.pymfem  README.md
docker/waveguide_sample/: model.py  waveguide.msh
extra/MPI/: CMakeLists.txt
extra/MUMPS/: CMakeLists.txt  MUMPS_MITengaging_Makefile.inc  MUMPS_MITengaging_PAR_Makefile.inc  MUMPS_PPPLINTEL_Makefile.inc  MUMPS_PPPL_Makefile.inc  MUMPS_PPPL_serial_Makefile.inc  MUMPS_brew_Makefile.inc  MUMPS_brew_PAR_Makefile.inc  MUMPS_cori_Makefile.inc  MUMPS_cori__Makefile.inc  MUMPS_db8_Makefile.inc  MUMPS_db8_PAR_Makefile.inc  MUMPS_db8_Par_Makefile.inc  MUMPS_default_Makefile.inc  MUMPS_default_PAR_Makefile.inc  MUMPS_macport_Makefile.inc  MUMPS_macport_PAR_Makefile.inc  MUMPS_rh7_Makefile.inc  MUMPS_rh7_PAR_Makefile.inc  MUMPS_ubuntu18_Makefile.inc  MUMPS_ubuntu18_PAR_Makefile.inc  MUMPS_ubuntu20_Makefile.inc
extra/boost/: CMakeLists.txt
extra/lapack/: CMakeLists.txt
extra/scotch/: CMakeLists.txt  scotch_default_Makefile.inc
scripts/: #PetraM_Base_default_clone.sh#  MUMPS_MITengaging_build.sh  MUMPS_default_build.sh  MUMPS_default_clean.sh  MUMPS_default_clone.sh  OCC_cori_build.sh  OCC_default_build.sh  OCC_default_clean.sh  OCC_default_clone.sh  OCC_macport_build.sh  OOC_default_build.sh  OOC_default_clone.sh  OOC_defualt_build.sh  OOC_defualt_clone.sh  PUMI-MESHES_default_clone.sh  PUMI-PYTHON_default_build.sh  PUMI-PYTHON_default_clean.sh  PUMI_default_build.sh  PUMI_default_clean.sh  PUMI_default_clone.sh  PetraM_Base_default_build.sh  PetraM_Base_default_clean.sh  PetraM_Base_default_clone.sh  PetraM_Base_ext_default_build.sh  PetraM_Base_ext_default_clean.sh  PetraM_Base_ext_default_clone.sh  PetraM_Driver_default_build.sh  PetraM_Driver_default_clean.sh  PetraM_Driver_default_clone.sh  PetraM_Geom_default_build.sh  PetraM_Geom_default_clean.sh  PetraM_Geom_default_clone.sh  PetraM_MPW_default_build.sh  PetraM_MPW_default_clean.sh  PetraM_MPW_default_clone.sh  PetraM_MUMPS_MITengaging_build.sh  PetraM_MUMPS_MITengaging_build1.sh  PetraM_MUMPS_clone.sh  PetraM_MUMPS_cori_build.sh  PetraM_MUMPS_default_build.sh  (+101 more)
scripts/activation_scripts/: activate_twopi_brew  activate_twopi_default
scripts/subs/: find_boost.sh  find_lapack.sh  find_mpi.sh  git_access.sh  ostype.sh  realpath.sh
